<resources>
    <string name="app_name">MealPlanner</string>
    <string name="login">Log In</string>
    <string name="register">Create account</string>
    <string name="don_t_have_an_account">Dont have an account? Create an account</string>
    <string name="or">or</string>
    <string name="continuetext">Continue</string>
    <string name="create_an_account">Create an account</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="termsConditions">I agree to the Terms &amp; Conditions</string>
    <string name="create">Create</string>
    <string name="haveAccount">Already have an account? Sign in</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="user">User</string>
    <string name="cart">Cart</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_user">HELLO, user!</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="add_meal_text">Add a meal for today</string>
    <string name="account_overview">Account overview</string>
    <string name="my_profile">My profile</string>
    <string name="preapared_recipes">Preapared recipes</string>
    <string name="change_password">Change password</string>
    <string name="settings">Settings</string>
    <string name="add_new_recipe">Add new recipe!</string>
    <string name="recipe_name">Recipe name*</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_steps">Add steps...</string>
    <string name="add_new_step">+ Add new</string>
    <string name="select_category">Select category</string>
    <string name="favourite_recipes">Favourite recipes</string>
    <string name="select_ingredients">Select ingredients</string>
    <string name="milk">Milk</string>
    <string name="eggs">Eggs</string>
    <string name="rice">Rice</string>
    <string name="chicken">Chicken</string>
    <string name="upload_picture">Upload picture</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="meat">Meat</string>
    <string name="details">Details</string>
    <string name="product_name">Product name</string>
    <string name="waffles_with_dulce_de_leche">Waffles with dulce de leche</string>
    <string name="_20_mins">20 mins</string>
    <string name="servings">Servings</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="add_all_to_cart">Add all to cart</string>
    <string name="ingredient_image">Ingredient image</string>
    <string name="year">2024</string>
    <string name="september">September</string>
    <string name="sept_18">Sept 18</string>
    <string name="coffe_amp_bread"><![CDATA[Coffe & bread]]></string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="snack">Snack</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="today_s_menu">Today\'s menu</string>

    <string-array name="ingredient_name_cv">
        <item>Lettuce</item>
        <item>Rice</item>
        <item>Tomato</item>
        <item>Pasta</item>
        <item>Ketchup</item>
        <item>Chicken</item>
        <item>Coffee</item>
        <item>Chocolate bar</item>
        <item>Water</item>
        <item>Cocoa</item>
        <item>Salmon</item>
    </string-array>

    <string-array name="ingredient_detail_cv">
        <item>Vegetable</item>
        <item>Cereal</item>
        <item>Vegetable</item>
        <item>Cereal</item>
        <item>Sauce</item>
        <item>Meat</item>
        <item>Drink</item>
        <item>Sweet</item>
        <item>Drink</item>
        <item>Drink</item>
        <item>Fish</item>
    </string-array>

    <string-array name="ingredient_price_cv">
        <item>1.50 €</item>
        <item>1.00 €</item>
        <item>2.50 €</item>
        <item>3.00 €</item>
        <item>5.50 €</item>
        <item>2.50 €</item>
        <item>1.50 €</item>
        <item>4.50 €</item>
        <item>0.50 €</item>
        <item>1.50 €</item>
        <item>7.50 €</item>
    </string-array>

    <string-array name="step_description_cv">
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
        <item>Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do </item>
    </string-array>
</resources>