<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Calendar"
    android:background="@color/md_theme_tertiaryContainer">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gH1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03"
            />

        <FrameLayout
            android:id="@+id/calendarContainerCS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gH1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="30dp"/>

        <View
            android:id="@+id/horizontalLineCS"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_theme_scrim"
            app:layout_constraintTop_toBottomOf="@id/calendarContainerCS"
            android:layout_marginTop="16dp"/>

        <View
            android:id="@+id/verticalLineCS"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_scrim"
            app:layout_constraintTop_toBottomOf="@id/horizontalLineCS"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="115dp" />

        <TextView
            android:id="@+id/actualDayTextCS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sept_18"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/horizontalLineCS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/verticalLineCS"
            android:layout_marginTop="14dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/actualDayTextCS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/verticalLineCS"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="33dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/md_theme_scrim"
                android:layout_weight="1"/>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/md_theme_scrim"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="16sp"
                    android:textColor="@color/md_theme_scrim"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="16sp"
                    android:textColor="@color/md_theme_scrim"
                    android:layout_weight="1"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/horizontalLineCS"
            app:layout_constraintStart_toEndOf="@id/verticalLineCS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/recipe_name">

        <LinearLayout
            android:id="@+id/recipesLayoutCS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp">

            <FrameLayout
                android:id="@+id/breakfastLayoutCS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>

            <FrameLayout
                android:id="@+id/lunchLayoutCS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"/>

            <FrameLayout
                android:id="@+id/snackLayoutCS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"/>

            <FrameLayout
                android:id="@+id/dinnerLayoutCS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"/>

        </LinearLayout>
        </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
